fix: set box-sizing to border-box to fix unwanted overflow on the vertical axis

--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,18 @@
     --color5: #7097ab;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     min-height: 100dvh;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding: 2rem;
 }
 
 header {
@@ -19,7 +25,7 @@ header {
     height: 60px;
     padding-block: 5px;
     padding-inline: 30px;
-    width: min(100%, 800px);
+    width: min(100%, 900px);
     border-radius: 50px;
     justify-content: space-between;
     margin-inline: auto;
@@ -39,15 +45,23 @@ a {
     font-weight: 700;
     font-family: cursive;
     color: var(--color1);
+    padding-block: 7px;
+    padding-inline: 15px;
+    border: 2px solid var(--color5);
+    border-radius: 50px;
     transition: color 200ms ease;
     -webkit-transition: color 200ms ease;
     -moz-transition: color 200ms ease;
     -ms-transition: color 200ms ease;
     -o-transition: color 200ms ease;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
 }
 
 a:hover {
-    color: var(--color5)
+    color: var(--color5);
 }
 
 header p {
@@ -61,7 +75,7 @@ header p {
 
 nav {
     display: flex;
-    gap: 1rem;
+    gap: 20px;
 }
 
 footer {
